[fix] update cors config